--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                    <button><a href="">Learn More</a></button>
              </div>
              <div class="main-image">
-                  <img src="/assert/Pierre_Bonaparte.jpg" alt="" class="imgg" >
+                  <img src="./assert/Pierre_Bonaparte.jpg" alt="" class="imgg" >
              </div>
         </div>
         <div class="about">  
