--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <div class="main-check">
               <div class="main-name">
-                   <h2>HI, I am <br> Jules Houston</h2>
+                   <h2>HI, I am <br> Jules Bonaparte</h2>
                    <p>Frontend Developer</p>
                    <button class="but"><a href="">Download CV</a> </button>
                    <button><a href="">Learn More</a></button>
@@ -58,19 +58,19 @@
 
         <div class="about-image"> 
                  <div>
-                     <img src="/assert/li.jpeg" alt="" class="image1">
+                     <img src="./assert/li.jpeg" alt="" class="image1">
                      <p> <b>Full Name </b><br> Your  name goes here</p>
                 </div>
                 <div> 
-                    <img src="/assert/ri.jpeg" alt="" class="image1" >
+                    <img src="./assert/ri.jpeg" alt="" class="image1" >
                     <p> <b>Email Address</b><br> Your email goes here</p>
                 </div>
                 <div>
-                    <img src="/assert/si.jpg" alt="" class="image1" >
+                    <img src="./assert/si.jpg" alt="" class="image1" >
                     <p> <b>Twitter </b><br> Your tweet goes here</p>
                 </div>
                 <div>
-                    <img src="/assert/ti.jpeg" alt="" class="image1">
+                    <img src="./assert/ti.jpeg" alt="" class="image1">
                     <p> <b>Phone</b><br> Your contact goes here</p>
               </div>
         </div>
@@ -81,15 +81,15 @@
           </div> 
           <div class="whatt">
            <div class="sub-what">
-                   <img src="/assert/Vector (1).png" alt="" class="image11">
+                   <img src="./assert/Vector (1).png" alt="" class="image11">
                    <h4>Software <br>Development</h4>
            </div>
            <div class="sub-what2">    
-                  <img src="/assert/Vector (2).png" alt="" class="image11">
+                  <img src="./assert/Vector (2).png" alt="" class="image11">
                   <h4 class="hh">WEB <br>Development</h4> 
             </div> 
             <div class="sub-what">   
-                <img src="/assert/Vector.png" alt="" class="image11">
+                <img src="./assert/Vector.png" alt="" class="image11">
                 <h4 class="hh">WEB <br>DESIGN</h4>
             </div>
         </div>  
@@ -141,7 +141,7 @@
         <button id="but"><a href="">Submit Now</a></button>
 </main>
 <footer>
-    <p>&copy Jules Millenium</p> 
+    <p>&copy Jules</p> 
  </footer>
     
 </body>
