--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                <label>Phone No:</label> <br>
             </div> 
         </div>
-        <div> 
+        <div class="textarea"> 
             <textarea>Message</textarea>
         </div>
         <button id="but"><a href="">Submit Now</a></button>
